--- a/style.css
+++ b/style.css
@@ -31,7 +31,16 @@ svg {
     transition: opacity 0.25s;
 }
 
-.container:hover > .angle {
+.length {
+    opacity: 0;
+    position: absolute;
+    font-size: 12px;
+    color: #E5E5E5;
+    pointer-events: none;
+    transition: opacity 0.25s;
+}
+
+.container:hover > .angle, .container:hover > .length {
     opacity: 100%;
 }
 
