--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ svg {
 }
 
 .length {
-    opacity: 0;
+    opacity: 0%;
     position: absolute;
     font-size: 12px;
     color: #E5E5E5;
@@ -41,7 +41,7 @@ svg {
 }
 
 .container:hover > .angle, .container:hover > .length {
-    opacity: 100%;
+    opacity: 66%;
 }
 
 textarea {
@@ -92,6 +92,18 @@ a {
     justify-content: space-between;
 }
 
+input[type="checkbox"] {
+    appearance: none;
+    height: 16px;
+    width: 16px;
+    vertical-align:middle;
+    border: 1px solid black;
+    border-radius: 4px;
+}
+input[type="checkbox"]:checked {
+    background-color: lightgreen;
+}
+
 .helloworld {
     color: black;
     opacity: 10%;
@@ -101,7 +113,7 @@ a {
     .container::after {
         box-sizing: border-box;
         opacity: 50%;
-        background-color: red;
+        background-color: lightcoral;
         border-radius: 10px;
         padding: 8px;
         content: "You are on mobile, and unfortunately dragging the points does not work on mobile just yet.";
