--- a/style.css
+++ b/style.css
@@ -110,14 +110,20 @@ input[type="checkbox"]:checked {
     opacity: 10%;
 }
 
+.errortext {
+    display: none;
+    box-sizing: border-box;
+    opacity: 50%;
+    max-width: 400px;
+    content: var(--error-text);
+    background-color: lightcoral;
+    border-radius: 10px;
+    padding: 8px;
+}
+
 @media only screen and (max-device-width:600px) {
-    .container::after {
-        box-sizing: border-box;
-        opacity: 50%;
-        background-color: lightcoral;
-        border-radius: 10px;
-        padding: 8px;
-        content: "You are on mobile, and unfortunately dragging the points does not work on mobile just yet.";
+    .errortext {
+        display: block;
     }
     .container {
         transform: translate(-50%, -50%) scale(0.8);
