--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
     font-family: 'Trebuchet MS', sans-serif;
 }
 
+*{
+    font-size: 16px;
+}
+
 .container {
     position: absolute;
     top: 50%;
@@ -141,6 +145,9 @@ input[type="checkbox"]:checked {
 @media only screen and (max-device-width:1024px) {
     .errortext {
         opacity: 100%;
+    }
+    .logo {
+        display: none;
     }
     .container {
         transform: translate(-50%, -50%) scale(0.8);
