--- a/style.css
+++ b/style.css
@@ -235,6 +235,9 @@ input[type="checkbox"]:checked {
 }
 
 @media only screen and (max-device-width:1024px) {
+    .errortext {
+        opacity: 100%;
+    }
     .container {
         transform: translate(-50%, -50%) scale(0.8);
     }
